# cirrus-ops

./: .env.example  .gitignore  package.json  pnpm-lock.yaml  pyproject.toml  schema.sql
Grounding Knowledge/: Cirrus Sales Assistant GPT  (1).docx
frontend/: index.html  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  globals.css
frontend/src/api/: client.ts
frontend/src/components/: ActivityFeed.tsx  ApprovalWorkflow.tsx  BlogPreview.tsx  BriefCard.tsx  BulkGeneratePanel.tsx  CampaignCard.tsx  CampaignForm.tsx  ContentCard.tsx  ContentEditor.tsx  FilterBar.tsx  (+14 more)
migrations/: 003_content_studio.sql  004_presets_and_notes.sql  005_phase3_campaigns_briefs_approvals.sql  006_revops_quotes_orders.sql
src/cirrus_ops/: cli.py  config.py  db.py  models.py
supabase/: config.toml
supabase/migrations/: 00001_multi_tenancy_foundation.sql  00002_product_catalog.sql  00003_salesforce_import.sql  00004_stripe_sync.sql  00005_checkout_and_payments.sql  00006_documents.sql  00007_orders.sql  00008_analytics.sql  00009_fix_org_members_rls.sql  00010_org_creation_rpc.sql  00011_dev_bypass_support.sql  00012_stripe_pricebook.sql  00013_stripe_native_pricebook.sql  00014_ownership_hierarchy_engagement.sql  00015_multi_stripe_instances.sql  00016_sso_domains.sql  00017_stripe_api_parity.sql  00018_stripe_full_parity.sql  00019_quote_templates.sql  00020_pipeline_dashboard.sql  00021_allow_additional_discount.sql  00022_record_types.sql  00023_hidden_line_items.sql  00024_content_studio_tables.sql  00025_content_studio_seed.sql  20260220090000_mining_profiles.sql
(+72 files in other folders)
