[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cirrus-ops"
version = "0.1.0"
description = "Data pipeline and content mining platform for meeting transcripts"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "supabase>=2.0",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "tenacity>=8.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
cirrus = "cirrus_ops.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cirrus_ops"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
